<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_page">
    <!--    android:background="@color/background_tab_pressed"-->
    <View
        android:id="@+id/bottom_helper"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"/>
    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"

        android:layout_marginLeft="40dp"
        android:layout_toLeftOf="@id/right_side"
        android:layout_above="@+id/bottom_helper"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:paddingTop="4dp"
            android:src="@mipmap/tel_phone_96" />

        <LinearLayout
            android:id="@+id/ll_count_coming"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dot1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_selected"
                android:text="" />

            <TextView
                android:id="@+id/dot2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/circle_not_selected"
                android:text="" />

            <TextView
                android:id="@+id/dot3"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/circle_not_selected"
                android:text="" />

            <TextView
                android:id="@+id/dot4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/circle_not_selected"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tvTelephonetip"
            android:text=""
            android:textColor="@color/default_txt_lan"
            android:textSize="@dimen/txt_tel_size" />

        <TextView
            android:id="@+id/tvTelephonetip"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/phone_icon"
            android:text="@string/urgent_tel_text"
            android:textColor="@color/default_txt_lan"
            android:clickable="true"
            android:textSize="@dimen/txt_tel_size" />

    </RelativeLayout>
<!--    shopping_cart_bg-->
    <RelativeLayout
        android:id="@+id/right_side"
        android:layout_width="464dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@mipmap/bg_bus_all_2x"
        android:layout_above="@+id/bottom_helper"
        >

        <LinearLayout
            android:id="@+id/layout_shop_title"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
<!--            android:layout_marginLeft="140dp"-->
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"

                android:padding="8dp"
                android:src="@mipmap/bus_128"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/shopping_cart"
                android:textColor="@color/itemTextWhite"
                android:drawableLeft="@mipmap/bus_128"
                android:drawablePadding="12dp"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/recyclerShopping"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_below="@id/layout_shop_title"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/result"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_below="@id/number"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="@dimen/total_msg_margin_size"
            android:text="@string/goods_total_money_text"
            android:textColor="@color/itemTextBlack"
            android:textSize="@dimen/total_msg_textsize" />
<!--        android:layout_marginLeft="110dp"-->
        <TextView
            android:id="@+id/goto_pay"
            android:layout_width="306dp"
            android:layout_height="70dp"
            android:layout_below="@id/result"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:background="@drawable/bg_red_btn"
            android:gravity="center"
            android:text="@string/goto_pay_text"
            android:textColor="@color/itemTextWhite"
            android:textSize="28sp"

            />

        <TextView
            android:id="@+id/number_value"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_below="@id/line2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:gravity="center_vertical|right"
            android:text="3"
            android:textColor="@color/itemTextBlack"
            android:textSize="@dimen/total_msg_textsize" />

        <TextView
            android:id="@+id/result_value"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_below="@id/number_value"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/total_msg_margin_size"
            android:layout_marginRight="60dp"
            android:gravity="center_vertical|right"
            android:text="$ 90"
            android:textColor="@color/itemTextBlack"
            android:textSize="@dimen/total_msg_textsize" />

        <TextView
            android:id="@+id/cart_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_below="@id/layout_shop_title"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/empty_cart_not_pay"
            android:textColor="@color/itemTextBlack"
            android:textSize="28dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/number"
            android:layout_width="340dp"
            android:layout_height="38dp"
            android:layout_below="@id/line2"
            android:layout_marginLeft="48dp"
            android:text="@string/goods_num_text"
            android:textColor="@color/itemTextBlack"
            android:textSize="@dimen/total_msg_textsize" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/recyclerShopping"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@mipmap/line_for_bus" />

    </RelativeLayout>

    <TextView
        android:id="@+id/back"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/default_txt_lan"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btChinese"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/back"

        android:gravity="center"
        android:text="@string/chinese_text"
        android:textColor="@color/textSelectColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btEnglish"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/btChinese"
        android:gravity="center"
        android:text="@string/english_text"
        android:textColor="@color/textDefaultColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btFrench"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/btEnglish"
        android:gravity="center"
        android:text="@string/french_text"
        android:textColor="@color/textDefaultColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/btChinese"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@id/right_side"
        android:background="@color/lineColor" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/recyclerCommodity"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@id/line1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/right_side"
        android:background="@color/transparent"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@id/line1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/right_side"
        android:background="@color/transparent"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:text="@string/empty_good_list"
        android:gravity="center"
        android:overScrollMode="never" />
</RelativeLayout>