<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all_page">

    <ImageView
        android:id="@+id/result_iv"
        android:layout_width="318dp"
        android:layout_height="294dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="203dp"
        android:src="@mipmap/buy_success" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="666dp"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="60dp"
            android:src="@mipmap/tel_phone_96" />

        <TextView
            android:id="@+id/tvTelephonetip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/urgent_tel_text"
            android:textColor="@color/default_txt_lan"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/default_txt_lan"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bg_goto_first"
        android:layout_width="416dp"
        android:layout_height="86dp"
        android:layout_below="@+id/result_tip_en_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_red_btn"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goto_tip"
                android:layout_width="240dp"
                android:layout_height="86dp"
                android:gravity="center"
                android:text="@string/goto_first_text"
                android:textColor="@color/itemTextWhite"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="64dp"
                android:layout_height="86dp"
                android:text="3s"
                android:textColor="@color/itemTextWhite"
                android:textSize="28sp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/result_iv"
        android:gravity="center"
        android:text="@string/pay_success_text"
        android:textColor="@color/itemTextBlack"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/result_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/result_tv"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/itemTextBlack"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/result_tip_en_tv"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/result_tip_tv"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/itemTextBlack"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/time_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="120s"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible" />
</RelativeLayout>